// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders repository correctly 1`] = `
<div>
  <a
    href="www.test.com"
  >
     
    Test Testington
     
  </a>
  <CommitComponent
    abbreviatedOid="AAAAAA"
    committedDate="2018-05-04T19:59:54Z"
    message="This is a commit message"
  />
</div>
`;

exports[`renders repository with no commits correctly 1`] = `
<div>
  <a
    href="www.test.com"
  >
     
    Test Testington
     
  </a>
  <div
    style={
      Object {
        "paddingLeft": "1em",
      }
    }
  >
    No commits yet.
  </div>
</div>
`;
